# openfang

./: Cargo.toml
crates/openfang-api/src/: channel_bridge.rs
crates/openfang-api/static/: index_body.html
crates/openfang-api/static/js/pages/: agents.js  wizard.js
crates/openfang-desktop/src/: server.rs
crates/openfang-kernel/src/: kernel.rs
crates/openfang-runtime/src/: agent_loop.rs  lib.rs  llm_errors.rs  model_catalog.rs  web_fetch.rs
crates/openfang-runtime/src/drivers/: anthropic.rs  gemini.rs  mod.rs  openai.rs
crates/openfang-types/src/: agent.rs  config.rs  model_catalog.rs
